# src/routes/rentalRoute.js
@@ -1,9 +1,10 @@
 import express from 'express'
-import { rentVehicle, vehicleRentByUser } from '../controllers/rentalController.js'
+import { bookVehicle, rentVehicle, vehicleRentByUser } from '../controllers/rentalController.js'
 
 const rentalRouter = express.Router()
 
 rentalRouter.post('/rentals',rentVehicle)
 rentalRouter.get('/vehiclerentbyuser',vehicleRentByUser)
+rentalRouter.post('/bookvehicle',bookVehicle)
 
 export default  rentalRouter
